objects/Case.object
<CustomObject>
    <fields>
        <fullName>FinServ__FinancialAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Cases</relationshipLabel>
        <relationshipName>HouseholdCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Approval_Requested_From_TBOM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date by which relationship has requested that TBOM approve.</inlineHelpText>
        <label>Final Approval Requested From TBOM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Outcome_of_Review__c</fullName>
        <inlineHelpText>Enter the final outcome of the collateral review request. If the collateral material is withdrawn by the relationship, notate the reason in the Chatter section.</inlineHelpText>
        <label>Final Outcome of Review</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Resolution_and_Actions_Taken__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Final Resolution and Actions Taken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Liquidity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial &amp; Liquidity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_6_of_Account_Number__c</fullName>
        <formula>Account.First_6_of_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First 6 of Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_By_Agency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did the agency follow up for additional info</description>
        <inlineHelpText>Did the agency follow up for additional info?</inlineHelpText>
        <label>Follow Up By Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_Up_to_Relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Follow up to relationship required after response and documentation received?</description>
        <inlineHelpText>Was follow up to the relationship required after initial response and supporting documentation received?</inlineHelpText>
        <label>Follow Up to Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fraud_Approval_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fraud Approval Needed</description>
        <inlineHelpText>Check if Fraud needs to review and approve.</inlineHelpText>
        <label>Fraud Approval Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frequency_Review_Owner_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provide owner (by numbered strategy) for overseeing the review of new controls once implemented.</inlineHelpText>
        <label>Frequency Review Owner(s)</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Review__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provide frequency (by numbered strategy) of the review of new controls once implemented.</inlineHelpText>
        <label>Frequency of Review</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_or_Line_Restrictions__c</fullName>
        <inlineHelpText>Do you anticipate any difficulty regarding funding or ability to access your current lines?</inlineHelpText>
        <label>3.07 Funding or Line Restrictions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Human_action_or_inaction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Human action or inaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Approval_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if IT Approval Needed</description>
        <inlineHelpText>Check if IT Approval Needed</inlineHelpText>
        <label>IT Approval Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Info_Sec__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IT &amp; Info Sec</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_yes_to_3_02_provide_information__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If yes to 3.02 above, please provide additional information or updated projections.</inlineHelpText>
        <label>3.03 If yes to 3.02, provide information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>If_yes_to_3_04_Provide_Information__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If yes to 3.04 above, please provide additional information of how this will be enacted.</inlineHelpText>
        <label>3.05 If yes to 3.04 Provide Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Inaccurate_assessment_and_or_planning__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Inaccurate assessment and/or lack of planning</inlineHelpText>
        <label>Inaccurate assessment and/or planning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inaccurate_or_ambiguous_information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inaccurate or ambiguous information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inbound_Call_Volumes__c</fullName>
        <inlineHelpText>Is inbound call volume expected to increase or has call volume increased as a result of the incident? If No or N/A, skip 4.12 - 4.14</inlineHelpText>
        <label>4.11 Inbound Call Volumes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_Action_Plan__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe action plan to remediate incident</inlineHelpText>
        <label>Incident Action Plan</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Incident_Impact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe impacted population or impact to the bank/relationship</inlineHelpText>
        <label>Incident Impact</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Initial_Date_of_Detection__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date relationship or TBOM discovered incident</inlineHelpText>
        <label>Initial Date of Detection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Legal_Case_Assessment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Initial Legal Case Assessment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Initial_Response_to_Complaint_Source__c</fullName>
        <description>Date initial response sent to complaint source, if different from customer.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date initial response was sent to complaint source, if different from customer (i.e. agency).</inlineHelpText>
        <label>Initial Response to Complaint Source</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_SLA_in_Working_Days__c</fullName>
        <inlineHelpText>Enter the number of working days allowed under TBOM&apos;s SLA procedures and/or the contractual SLA with the relationship.</inlineHelpText>
        <label>Initial SLA in Working Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_TBOM_Response_Plan_Flow__c</fullName>
        <label>Initial TBOM Response Plan Flow</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Non-standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Legal_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal legal to check this box if they have reviewed subpoena, garnishment, warrant, or other legal request.</description>
        <label>Internal Legal Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Isolated_Incident__c</fullName>
        <label>Isolated Incident</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Jurisdiction</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__EngineeringReqNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not required and is manually populated. This field is used as part of approval lookups to specify the user.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lack_of_or_incomplete_communication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lack of or incomplete communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_4_Digits_of_Card_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last 4 Digits of Card Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_4_Digits_of_Cardholder_SSN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last 4 Digits of Cardholder SSN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_4_of_Account_Number__c</fullName>
        <formula>Account.Last_4_of_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 4 of Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Approver_Internal_CS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contract Services Internal legal approval</inlineHelpText>
        <label>CS Legal Approver Internal</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Approver_Internal_Core__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Core Bank internal legal approver</description>
        <inlineHelpText>Core Bank internal legal approver</inlineHelpText>
        <label>Core Legal Approver Internal</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>External Legal Approver</inlineHelpText>
        <label>Legal Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Case_Answer_Deadline__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date the response is due to court and/or opposing party</inlineHelpText>
        <label>Legal Case Answer Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Case_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the legal case number, if applicable</inlineHelpText>
        <label>Legal Case Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Request_Type_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If &quot;Legal Request Type&quot; is &quot;Other&quot; then enter specific request.</inlineHelpText>
        <label>Legal Request Type Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Request_Type__c</fullName>
        <label>Legal Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lawsuit</fullName>
                </value>
                <value>
                    <fullName>Demand or Unfiled</fullName>
                </value>
                <value>
                    <fullName>Arbitration</fullName>
                </value>
                <value>
                    <fullName>Subpoena</fullName>
                </value>
                <value>
                    <fullName>Warrant</fullName>
                </value>
                <value>
                    <fullName>Garnishment</fullName>
                </value>
                <value>
                    <fullName>Summons</fullName>
                </value>
                <value>
                    <fullName>Cease and Desist</fullName>
                </value>
                <value>
                    <fullName>Victim Notification</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Letter_s_Sent_to_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Acknowledgment appropriate letter(s) was sent to cardholder by back office agent (if applicable)</inlineHelpText>
        <label>Letter(s) Sent to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Liquidity_Impacts__c</fullName>
        <inlineHelpText>Is there potential for any liquidity impacts related to your portfolio and company as a result of this incident? (i.e. line reductions, line closures, etc.)</inlineHelpText>
        <label>3.06 Liquidity Impacts</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Litigation_Category__c</fullName>
        <label>Litigation Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Litigation or Demands</fullName>
                </value>
                <value>
                    <fullName>Material Litigation</fullName>
                </value>
                <value>
                    <fullName>Regulatory Investigations</fullName>
                </value>
                <value>
                    <fullName>Disputes Over IP Ownership</fullName>
                </value>
                <value>
                    <fullName>Injunctive or Declaratory Remedies</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Litigation_Sub_Category_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provide brief explanation if litigation sub-category is &quot;Other&quot;</inlineHelpText>
        <label>Litigation Sub-Category &quot;Other&quot;</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Litigation_Sub_Category__c</fullName>
        <inlineHelpText>Enter the litigation sub-category. If &quot;Other&quot; is selected, please provide explanation.</inlineHelpText>
        <label>Litigation Sub-Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FDCPA</fullName>
                </value>
                <value>
                    <fullName>TCPA</fullName>
                </value>
                <value>
                    <fullName>FCRA</fullName>
                </value>
                <value>
                    <fullName>TILA</fullName>
                </value>
                <value>
                    <fullName>Fair Lending</fullName>
                </value>
                <value>
                    <fullName>Licensing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Malicious_intent_or_willful_negligence__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Malicious intent or willful negligence (presumably by rogue party)</inlineHelpText>
        <label>Malicious intent or willful negligence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Management_at_Relationship_Aware__c</fullName>
        <label>Management at Relationship Aware</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_of_Relationships_Management__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter name of senior management approving at relationship</inlineHelpText>
        <label>Member of Relationship&apos;s Management</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Natural_Disaster__c</fullName>
        <inlineHelpText>Select all triggering events that apply.</inlineHelpText>
        <label>Natural Disaster</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hurricane</fullName>
                </value>
                <value>
                    <fullName>Winter Weather Event</fullName>
                </value>
                <value>
                    <fullName>Tornado</fullName>
                </value>
                <value>
                    <fullName>Earthquake</fullName>
                </value>
                <value>
                    <fullName>Tsunami</fullName>
                </value>
                <value>
                    <fullName>Pandemic</fullName>
                </value>
                <value>
                    <fullName>Wild Fire</fullName>
                </value>
                <value>
                    <fullName>Flood</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nature_of_Complaint__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Nature of Complaint</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nature_of_Incident__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Nature of Incident</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Material__c</fullName>
        <inlineHelpText>If no, attach a version of previously approved material indicating changes or provide description of changes below.</inlineHelpText>
        <label>New Material</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notable_observations_re_Handling__c</fullName>
        <inlineHelpText>Were there any concerns identified during the complaint resolution process, including concerns or issues unrelated to the complaint topic?</inlineHelpText>
        <label>Notable observations re: Handling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes_Case_Number_Added_to_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Acknowledgment notes and case number have been added to account on fiserv system by back office agent</inlineHelpText>
        <label>Notes &amp; Case Number Added to Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_or_Explanation_of_Claim__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes or Explanation of Claim</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Online_Banking_ID__c</fullName>
        <formula>Account.Online_Banking_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updates to this field must be done on the Account record</inlineHelpText>
        <label>Online Banking ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operational__c</fullName>
        <inlineHelpText>Select all triggering events that apply.</inlineHelpText>
        <label>Operational</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Violation By Relationship</fullName>
                </value>
                <value>
                    <fullName>Dissolution of Relationship</fullName>
                </value>
                <value>
                    <fullName>Liquidity Crisis at Relationship</fullName>
                </value>
                <value>
                    <fullName>Communications or Operational Infrastructure Failure</fullName>
                </value>
                <value>
                    <fullName>Failure to Purchase Receivables or Fund Collateral</fullName>
                </value>
                <value>
                    <fullName>Critical Vendor Outage</fullName>
                </value>
                <value>
                    <fullName>Change in Control w/ Negative Business Impact</fullName>
                </value>
                <value>
                    <fullName>Executive or Corporate Misconduct</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy of Relationship</fullName>
                </value>
                <value>
                    <fullName>Disruption of In-House Call Center Ops</fullName>
                </value>
                <value>
                    <fullName>Major Extended Power Outage</fullName>
                </value>
                <value>
                    <fullName>Major or Class Action Lawsuit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Operations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operations_or_Compliance_Reduction__c</fullName>
        <inlineHelpText>Has operations or compliance staffing been reduced as a result of the incident or incident response efforts?</inlineHelpText>
        <label>5.02 Operations or Compliance Reductions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organizational_culture_and_or_leadership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Organizational culture and/or leadership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Agency_Receiving_Complaint__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter Agency name if Agency Receiving Initial Complaint is &quot;Other&quot;</inlineHelpText>
        <label>Other Agency Receiving Complaint</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_TBOM_Agency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter Agency Name if TBOM Complaint Source is “Other Agency&quot;</inlineHelpText>
        <label>Other TBOM Agency</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_TBOM_Resources__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please document other TBOM departments included in project.</inlineHelpText>
        <label>Other TBOM Resources</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_TBOM_SME_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Collateral Material needs specialized SME review and approval.</description>
        <inlineHelpText>Check the box if collateral material needs specialized SME review and approval. Tag the SME in the case comments by using the at sign and typing their name.</inlineHelpText>
        <label>Other TBOM SME Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_TBOM_Tier2_Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provide name of &quot;Other&quot; Tier 2 Escalation source.</inlineHelpText>
        <label>Other TBOM Tier 2 Source</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Triggering_Event__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Triggering Event</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If Case Record Type is &quot;Other Incident&quot;, please describe</inlineHelpText>
        <label>Other Type</label>
        <length>85</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_a_if_applicable__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter name of other representative approving at relationship</inlineHelpText>
        <label>Other-a (if applicable)</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_b_if_applicable__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter name of other representative approving at relationship</inlineHelpText>
        <label>Other-b (if applicable)</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_root_cause_explain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other root cause (explain)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_root_cause_factor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If &quot;Other&quot; Incident Root Cause Contributing Factors is selected, provide description</inlineHelpText>
        <label>Other root cause factor</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Outside_Counsel__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter name of outside counsel, if applicable</inlineHelpText>
        <label>Outside Counsel</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provide owner (by numbered strategy) for overseeing the implementation of new controls.</inlineHelpText>
        <label>Owner(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PFI__c</fullName>
        <label>PFI</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank of Missouri</fullName>
                </value>
                <value>
                    <fullName>Studio Bank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>